sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: not found: value posGrainchaux
  while (posGrainchaux > 0 && posGraincheux < longueur) {
         ^