sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var longueur:Int = getNombreValeurs()
  var posGraincheux:Int = 1
  
  while (posGrainchaux > 0 && posGraincheux < longueur) {
    // Graincheux v?rifie les pots sont dans le bon ordre.
    if (plusPetit(posGraincheux, posGraincheux - 1)) {
    	echange(posGraincheux, posGraincheux - 1)
      posGraincheux -= 1
    }
    else
    	posGraincheux += 1
  }
}